--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Outsera Angular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://www.outsera.com/favico.ico">
+  <link rel="icon" type="image/x-icon" href="assets/favico.ico">
 </head>
 <body>
   <app-root></app-root>
